--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             startEvents: click;
             "
             ></a-box>
-            <a-box position="-4 0 -8" height="2" depth="0.5" width="2" color="pink"
+            <a-cylinder position="-4 0 -8" height="2" radius="1" color="pink"
             animation="
             property: rotation;
             from: 20 0 0;
@@ -47,7 +47,7 @@
             dir: alternate;
             startEvents: click;
             "
-            ></a-box>
+            ></a-cylinder>
         </a-scene>
     </body>
 </html>
